<resources>
    <string name="app_name">Students App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_log_out">Log out</string>
    <string name="action_contact">Contact</string>
    <string name="action_about">About</string>
    <string name="howto">How To Use</string>
    <string name="edit_courses">Edit Courses</string>
    <string name="hcomplaints_guide">Hostel complaints can be registered through this portal, which will be displayed here. Generic complaints are displayed with their proximities(closest room number to the place of issue) and number of complaints displayed with them. </string>
    <string name="even_year1">Jan-May 2016</string>
    <string name="odd_year1">Jul-Nov 2016</string>
    <string name="even_year2">Jan-May 2017</string>
    <string name="odd_year2">Jul-Nov 2017</string>
    <string name="about_us">This app is developed by Institute MobOps Team. All rights are reserved</string>
    <string name="complaint_check_box_msg">I have already informed a mess/facilities managers prior to this Complaint.</string>
    <string name="bunker">10</string>
    <string name="error_connection">Couldn\'t connect to the server.</string>
    <string name="error_parsing">Error getting data, try again later…</string>
    <string name="error_no_result">No results found.</string>
    <string name="error_sending">Error sending data, try again later…</string>
    <string name="error_enter_more_characters">Enter three or more characters to get results.</string>
    <string name="error_no_complaints">No Complaints registered.</string>
    <string name="error_server">Server error</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Open</string>
    <string name="LoginURl">https://students.iitm.ac.in/studentsapp/login/index.php</string>
    <string name="url_register_fcm">https://students.iitm.ac.in/studentsapp/general/token_register.php</string>
    <string name="url_get_threads">https://students.iitm.ac.in/studentsapp/hasportal/threads.php</string>
    <string name="url_get_messages">https://students.iitm.ac.in/studentsapp/hasportal/get_messages.php</string>
    <string name="url_send_message">https://students.iitm.ac.in/studentsapp/hasportal/send_message.php</string>
    <string name="url_complaint_resolve">https://students.iitm.ac.in/studentsapp/hasportal/complaint_resolved.php</string>
    <string name="url_complaint_post">https://students.iitm.ac.in/studentsapp/hasportal/post.php</string>
    <string name="url_fetch_list">https://students.iitm.ac.in/studentsapp/hasportal/fetch.php?type1=</string>
    <string name="fifthettateurl">http://www.t5eiitm.org/wp-json/wp/v2/posts</string>
    <string name="url_eml">https://students.iitm.ac.in/studentsapp/eml/lecs.php</string>
    <string name="url_home">https://students.iitm.ac.in/studentsapp/general/get_notifs.php</string>
    <string name="url_eml_upcoming">https://students.iitm.ac.in/studentsapp/eml/upcoming_lecs.php</string>
    <string name="url_schroiter_updates">https://students.iitm.ac.in/studentsapp/schroeter/get_updates.php</string>
    <string name="url_schroiter_scores">https://students.iitm.ac.in/studentsapp/schroeter/get_links.php</string>
    <string name="url_complaint_categories">https://students.iitm.ac.in/studentsapp/hasportal/get_complaint_categories.php</string>
    <string name="title_activity_student_search">Student Search</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_map">Institute Map</string>
    <string name="title_activity_imp_contacts">Important Contacts</string>
    <string name="title_activity_organisations">Organisations</string>
    <string name="title_activity_eml">EML</string>
    <string name="title_activity_eml_long">Extra Mural Lectures</string>
    <string name="title_activity_t5e">T5E</string>
    <string name="title_activity_t5e_long">The Fifth Estate</string>
    <string name="title_activity_mess_and_facilities">Mess and Facilities</string>
    <string name="title_activity_complaint_box">Complaint Box</string>
    <string name="title_activity_complaint_hostel">Hostel Complaints</string>
    <string name="title_activity_complaint_mess_fac">Mess and Facilities Complaints</string>
    <string name="title_activity_complaint_general">General Complaints</string>
    <string name="title_activity_student_details">Student Info</string>
    <string name="title_activity_home">Notifications</string>
    <string name="title_activity_thread">Complaints</string>
    <string name="title_activity_message_chat">Chat</string>
    <string name="title_activity_list">New Complaint</string>
    <string name="title_activity_complaint">Complaint</string>
    <string name="title_activity_news">Article</string>
    <string name="title_activity_timetable">Timetable</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_emldetails">Lecture Details</string>
    <string name="title_activity_emlfeedback">Feedback Or Questionnaire</string>
    <string name="title_activity_schroiter">Schroeter</string>
    <string name="title_activity_contact_us">Contact Us</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_subscriptions">Subscriptions</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="title_sync_calendar">Sync Calendar</string>
    <string name="team_16_17">Institute Mobile Operations 16-17</string>
    <string name="cores_16_17">Sai Praneeth</string>
    <string name="coords_16_17">Anurag Shrivastav, Omkar Patil, Sathwik Chadaga P</string>
    <string name="t1_c1">Sai Praneeth</string>
    <string name="t1_m1">Anurag Shrivastav</string>
    <string name="t1_m2">Omkar Patil</string>
    <string name="t1_m3">Sathwik Chadaga P</string>
    <string name="team_17_18">Institute Mobile Operations 17-18</string>
    <string name="cores_17_18">Omkar Patil, Sameer Kulkarni</string>
    <string name="coords_17_18">Aebel Joe Shibu, Ankit Kumar, Gautam Krishna,\n
        Harshitha S, Mohammad Ajmal, Mritunjoy Das,\n Om Shri Prasath, R Rohithram, Sarath Chandra</string>
    <string name="t2_c1">Omkar Patil</string>
    <string name="t2_c2">Sameer Kulkarni</string>
    <string name="t2_m1">Aebel Joe Shibu</string>
    <string name="t2_m2">Ankit Kumar</string>
    <string name="t2_m3">Gautam Biju Krishna</string>
    <string name="t2_m4">Harshitha S</string>
    <string name="t2_m5">Mohammed Ajmal</string>
    <string name="t2_m6">Mritunjoy das</string>
    <string name="t2_m7">Om Shree Prasant</string>
    <string name="t2_m8">R Rohithram</string>
    <string name="t2_m9">Sarath Chandra</string>
    <string name="update_message">Some Important Features Have Been Added.</string>
    <string name="update">Update</string>
    <string name="dont_update">No, Thanks</string>
    <string name="force_update">Update :|</string>
    <string name="dismiss_home_dialog">Dismiss</string>
    <string name="go_to_link">Go to link</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="msg_subscribed">Notifications On</string>
    <string name="msg_unsubscribed">Notifications Off</string>
    <string name="search_places">Search places</string>
    <string name="search_hint">Name of the place</string>
    <string name="search_title">Search a location</string>
    <string name="bus_route">Show Bus Route</string>
    <string name="instrucions">Guide for using the timetable:\n\n
        Long click on a cell for registering a bunk.\n
        Double click on a cell(can be vacant too) for editing it.\n\n
        FN = forenoon, AN = afternoon\n\n
        On running into any issues, remove all courses from the Edit Courses menu and add them back again.
    </string>
    <string name="inst">Long click on a cell for registering a bunk.\n
        Double click on a cell(can be vacant too) for editing it.\n\n
        FN = forenoon, AN = afternoon\n\n
        On running into any issues, remove all courses from the Edit Courses menu and add them back again.</string>
    <string name="instructions">A slot will turn red in the bunk monitor when you need to pay more attention about bunking more of that course.\n
    You can edit the number of bunks done manually by clicking on the corresponding course in the bunk monitor.</string>
    <string name="new_complaint">New Complaint</string>
    <string name="custom_complaint">Custom Complaint</string>
    <string name="complaint_title">Title</string>
    <string name="tag">Tags</string>
    <string name="complaint_description">Description</string>
    <string name="complaint_proximity">Proximity</string>
    <string name="templates">Templates</string>
    <string name="room_number">Near which room?</string>
    <string name="write_your_own">Write custom Complaint</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="facebook_app_id">"1544898062227250"</string>
    <string name="Apptoken">"1544898062227250|IrQXoiRecw_KOc0Lw1aY3mIkB-g"</string>
    <string name="pageid">"884294325001601"</string>
    <string name="userid">"1834695056756669"</string>
    <string name="reaction_query">"reactions.type(LIKE).summary(total_count).limit(0).as(like),reactions.type(LOVE).summary(total_count).limit(0).as(love),reactions.type(WOW).summary(total_count).limit(0).as(wow),reactions.type(HAHA).summary(total_count).limit(0).as(haha),reactions.type(SAD).summary(total_count).limit(0).as(sad),reactions.type(ANGRY).summary(total_count).limit(0).as(angry)"</string>
    <string name="mediaclubchannelid">"UCL54SxfvU26y-niXyi1VY9A"</string>
    <string name="webServerId">"747155189394-9v8jbhmdk0r2v50hi7pev50sdv6pu10b.apps.googleusercontent.com"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="Listofpagenames">
        <item>"InstiMediaIITM/"</item>
        <item>"Mediaclubiitm/"</item>
        <item>"saarangiitm/"</item>
        <item>"Shaastra/"</item>
        <item>"ReachIITM/"</item>
        <item>"eml.iitm/"</item>
        <item>"iitmtv/"</item>
        <item> "IITPodDa/"</item>
        <item>"cfiiitm/"</item>
        <item>"SportsIITM/"</item>
        <item>"iar.iitmadras/"</item>
        <item>"t5e.iitm/"</item>
        <item>"fineartsclubiitmadras/"</item>
        <item>"ECELLIITM/"</item>
        <item>"SLCIITMadras/"</item>
        <item>"nss.iitm/"</item>
        <item>"mitr.iitm/"</item>
        <item>"saathi.iitm/"</item>
        <item>"152210554869211"</item>
        <item>"362692757076050"</item>

    </string-array>
    <string name="ID_Techsoc">"362692757076050"</string>
    <string name="ID_Litsoc">"152210554869211"</string>
    <string-array name="organisations">
        <item>IIT Madras</item>
        <item>Media Club IITM</item>
        <item>iitmtv</item>
        <item>emliitm</item>
        <item>Saarang IITM</item>
        <item>Shaastra IITM</item>
    </string-array>
    <string-array name="indexOfYoutubeOrg">
        <item>"1|mediaclubiitm"</item>
        <item>"4|ReachIITM"</item>
        <item>"2|iitmsaarang"</item>
        <item>"3|iitmshaastra"</item>
        <item>"6|iitmtv"</item>
        <item>"5|emliitm"</item>
    </string-array>
    <string name="calendar_sync">Remove Calendar</string>
    <string name="ProfileDisclaimer">The following Information will be made public.</string>
    <string name="my_complaints">My Complaints</string>
    <string name="general">General</string>
    <string name="hostel">Hostel</string>
    <string name="add_new">Add new</string>
    <string name="mess_complaints">Complaints</string>
</resources>