<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_general"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/general" />

    <item
        android:id="@+id/navigation_hostel"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/hostel" />

    <item android:id="@+id/navigation_mess"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/mess_complaints"/>

    <item
        android:id="@+id/navigation_my_complaints"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/my_complaints" />

    <item
        android:id="@+id/navigation_add_complaint"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/add_new"/>

</menu>
