<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item
            android:id="@+id/bot_nav_home"
            android:icon="@drawable/ic_home_white_24dp"
            android:title="@string/title_activity_home" />

        <item
            android:id="@+id/bot_nav_organisations"
            android:icon="@drawable/ic_pages_black_24dp"
            android:title="@string/title_activity_organisations" />

        <item
            android:id="@+id/bot_nav_subscriptions"
            android:icon="@drawable/ic_notifications_active_black_24dp"
            android:title="@string/title_activity_subscriptions" />

        <item
            android:id="@+id/bot_nav_map"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/title_activity_map" />


</menu>