<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<item-->
        <!--android:id="@+id/calendar_sync"-->
        <!--android:orderInCategory="98"-->
        <!--android:title="@string/calendar_sync"-->
        <!--app:showAsAction="never" />-->
    <item
        android:id="@+id/action_about"
        android:orderInCategory="98"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/sync_calendar"
        android:icon="@drawable/quantum_ic_refresh_white_24"
        android:title="@string/title_sync_calendar" />
    <item
        android:id="@+id/action_log_out"
        android:orderInCategory="100"
        android:title="@string/action_log_out"
        app:showAsAction="never" />
</menu>
